# WSC-Triforce

./: .gitignore  Cargo.toml  Rocket.toml  canyon.toml
src/: main.rs  team.rs
src/api/: mod.rs
src/api/controllers/: lolesports.rs  mod.rs
src/api/request_handling/: api_key.rs
src/data_pull/: mod.rs
src/models/: league_with_streams.rs  leagues.rs  mod.rs  players.rs  schedules.rs  search_bar.rs  stream.rs  teams.rs  tournaments.rs  ts.rs
src/service/: mod.rs
src/utils/: constants.rs  mod.rs  triforce_catalog.rs
