[package]
name = "wsc_triforce"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# canyon_sql = { git = "https://github.com/zerodaycode/Canyon-SQL.git" }
canyon_sql = { git = "https://github.com/Pyzyryab/Canyon-SQL.git", branch = "testing/GH-15-testing-generate-the-unit-tests-necessary-to-augment-the-reliability-of-the-project" }